# rawzip

./: CHANGELOG.md  Cargo.toml  DESIGN.md  README.md
.github/workflows/: ci.yml
assets/: analysis.R  omni-mini.ja  rawzip-benchmark-data.csv
bench/: Cargo.toml
bench/src/: bench.rs  crc32.rs  criterion_main.rs  gungraun_main.rs  lib.rs  reader.rs  shared.rs  writer.rs
compare/: Cargo.toml
compare/benches/: bench.rs
examples/: big.rs  extract.rs  list.rs  read.rs  write.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_zip.rs
src/: archive.rs  crc.rs  errors.rs  extra_fields.rs  headers.rs  lib.rs  locator.rs  mode.rs  path.rs  reader_at.rs  time.rs  writer.rs  zipcrypto.rs
src/archive/: reader.rs
src/locator/: reader.rs
tests/it/: concatenated_zip_tests.rs  concurrent_tests.rs  crc_tests.rs  encryption_tests.rs  entry_name_tests.rs  entry_path_tests.rs  extra_data_zip_tests.rs  extra_fields_test.rs  false_sentinel_tests.rs  false_signature_tests.rs  main.rs  modification_time_tests.rs  permission_tests.rs  trailing_data_tests.rs  utf8_tests.rs  zip64_tests.rs
