[package]
name = "rawzip"
version = "0.4.4"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
edition = "2024"
description = "A Zip archive reader and writer"
repository = "https://github.com/nickbabcock/rawzip"
readme = "README.md"
license = "MIT"
keywords = ["zip", "archive"]
categories = ["filesystem", "compression", "parser-implementations"]
include = ["src/**/*.rs", "/examples", "LICENSE.txt", "assets", "tests"]
rust-version = "1.85"

[dependencies]

[dev-dependencies]
aes = "0.9.1"
ctr = "0.10.1"
filetime = "0.2"
flate2 = { version = "1.1.9" }
hmac = "0.13.0"
jiff = { version = "0.2.28", default-features = false }
paste = "1.0"
pbkdf2 = "0.13.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rstest = "0.26.1"
sha1 = "0.11.0"
zstd = "0.13.3"
