[package]
publish = false
name = "rawzip-bench"
version = "0.0.1"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
description = "Benchmark suite for rawzip."
homepage = "https://github.com/nickbabcock/rawzip/tree/master/bench"
repository = "https://github.com/nickbabcock/rawzip"
license = "MIT"
edition = "2024"

[workspace]

[lib]
bench = false

[[bench]]
name = "rawzip-bench-criterion"
harness = false
path = "src/criterion_main.rs"

[[bench]]
name = "rawzip-bench-gungraun"
harness = false
path = "src/gungraun_main.rs"

[dependencies]
criterion = "0.8.2"
rawzip = { path = ".." }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
gungraun = "0.19.1"

[profile.release]
debug = true

[profile.bench]
debug = true
